changed header time label back to 12pt font-size to stop hours from wrapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -60,7 +60,7 @@ body {
 }
 
 .time-label {
-  font-size: 12pt;
+  font-size: 11pt;
 }
 
 /* time-controls styles */
